--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Welcome, my name is Pamela Saborio</h1>
   <hr></hr>
-  <img width= 10% src="/Users/pamelasaborio/NW Data Science Boot Camp/11.Web/DSCF1185_conew1.jpg" alt = "Pamela Saborio"/>
+  <img width= 10% src="/Users/pamelasaborio/NW Data Science Boot Camp/Pame1481.github.io/DSCF1185_conew1.jpg" alt = "Pamela Saborio"/>
   <p> ¡Pura Vida!</p>
 <ul>
   <li><strong>Email:</strong> <a href="#">pame1481@gmail.com</a></li>
