--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Activity 1: Basic HTML Bio</title>
+  <link rel = "stylesheet" type = "text/css" href = "my.css"/>
 </head>
 <body>
   <h1>Welcome, my name is Pamela Saborio</h1>
-  <hr></hr>
+  <hr></hr> 
   <img width= 10% src="/Users/pamelasaborio/NW Data Science Boot Camp/Pame1481.github.io/DSCF1185_conew1.jpg" alt = "Pamela Saborio"/>
   <p> ¡Pura Vida!</p>
 <ul>
